--- a/media query.css
+++ b/media query.css
@@ -1,174 +1,935 @@
-@media screen and (max-width: 400px) {
-  .wrapper nav {
-    padding: 0 10px;
+@media only screen and (max-width: 798px) {
+  .nav-mobile {
+    display: block;
   }
-  .content .logo a {
-    font-size: 27px;
-  }
-  .wrapper .search-box {
-    max-width: calc(100% - 70px);
-  }
-  .wrapper .search-box .go-icon {
-    width: 30px;
-    right: 0;
-  }
-  .wrapper .search-box input {
-    padding-right: 30px;
-  }
-}
 
-@media screen and (max-width: 900px) {
-  .wrapper .menu-icon {
-    display: block;
-  }
-  .wrapper #show-menu:checked ~ .menu-icon i::before {
-    content: "\f00d";
-  }
-  nav .content .links {
-    display: block;
-    position: fixed;
-    background: #14181f;
-    height: 91%;
+  nav {
     width: 100%;
-    top: 70px;
-    left: -100%;
-    margin-left: 0;
-    max-width: 276px;
-    overflow-y: auto;
-    padding-bottom: 100px;
-    transition: all 0.3s ease;
+    padding: 70px 0 15px;
   }
-  nav #show-menu:checked ~ .content .links {
-    left: 0%;
-  }
-  .content .links li {
-    margin: 15px 0px;
-  }
-  .content .links li a {
-    line-height: 40px;
-    font-size: 20px;
-    display: block;
-    padding: 8px 18px;
-    cursor: pointer;
-  }
-
-  /* dropdown responsive code start */
-  .content .links ul{
-    top: 12rem ;
-  }
-
-  .content .links li:hover > ul {
-    top: 17.5rem;
-    z-index: 1 !important;
-    opacity: 1;
-    visibility: visible;
-    transition: all 0.3s ease;
-  }
-  .content .links ul ul{
-    left: -1rem;
-    width: 100%;
-    top: 3rem !important;
-  }
-  .content .links #show-features:checked ~ ul,
-  .content .links #show-services:checked ~ ul,
-  .content .links #show-items:checked ~ ul {
-    max-height: 100vh;
-  }
-  .content .links ul li {
-    margin: 7px 0px;
-  }
-  .content .links ul li a {
-    font-size: 18px;
-    line-height: 30px;
-    border-radius: 5px !important;
-  }
-}
-
-@media screen and (max-width: 1250px) {
-  .wrapper nav {
-    max-width: 100%;
-    padding: 0 20px;
-  }
-  nav .content .links {
-    margin-left: 0px;
-  }
-  .content .links li a {
-    padding: 8px 13px;
-  }
-  .wrapper .search-box {
-    max-width: calc(100% - 100px);
-  }
-  .wrapper .search-box input {
-    padding: 0 100px 0 15px;
-  }
-}
-
-@media (max-width: 430px) {
-  .sale-1, .sale-2, .sale-3, .sale-4, .sale-6{
+  nav ul {
     display: none;
-  }
-  #general-card{
-    
-    bottom: -4rem;
-  }
-  #clothes{
-    margin-top: 8rem !important;
-    flex-direction: column;
-    align-items: center;
-  }
-  #image-gallery{
-    height: 56vh;
-    top: 1rem;
-  }
-  #image-gallery h1{
-    font-size: 3em;
-    text-align: center;
-  }
-  .gallery-img{
+    position: absolute;
     width: 100%;
+    z-index: 5;
   }
-  .winter{
-    top: 0;
+  nav ul li {
+    float: none;
   }
-  .winter-link{
+  nav ul li a {
+    padding: 15px;
+    line-height: 20px;
+    padding-left: 25%;
+  }
+  nav ul li ul li a {
+    padding-left: 30%;
+  }
+
+  .nav-dropdown {
+    position: static;
+  }
+  .brand a img {
+    max-height: 60px;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 320px) {
+  #about {
+    height: 335vh;
+  }
+
+  #static-heading {
+    top: 4rem;
+    left: -0.5rem;
+    font-size: 2rem;
+  }
+
+  .about-title {
+    top: 4rem;
+  }
+
+  .dynamic-text {
+    line-height: 110px;
+    top: -1rem;
     left: 1rem;
+    margin-left: 10px;
   }
-  .end-container{
-    margin-top: 85rem !important;
-  }
-  .testim{
-    top: 23rem;
-  }
-  .footer{
-    top: 2rem !important;
-  }
-  .template-body{
-    width: 20rem !important;
-    bottom: 10rem;
+
+  .dynamic-text li {
+    top: -24px;
     left: 0rem;
   }
-  .sale-7 img{
-    top: 84rem !important;
-    margin-left: 0rem;
-    width: 100%;
+
+  .dynamic-text li span {
+    font-size: 1.5rem;
+    line-height: normal;
+  }
+
+  .ability-text {
+    font-size: 1rem !important;
+    top: 0rem;
+    width: 100% !important;
+    line-height: 2rem;
+  }
+
+  .learn-more-button {
+    top: 4rem;
+    left: 4.5rem;
+  }
+
+  .more-btn-link {
+    padding: 14px 12px;
+  }
+
+  .intro {
+    top: 10rem !important;
+  }
+
+  .skill-card-text {
+    width: 18.5rem !important;
+  }
+
+  .skill-card-title {
+    font-size: 1.6rem;
+  }
+
+  .mg-top {
+    margin-top: -1rem !important;
+  }
+
+  .col-margin {
+    margin-bottom: 8rem;
+  }
+
+  #services {
+    height: 470vh;
+  }
+
+  #work {
+    height: 185vh;
+  }
+  .cube {
+    height: 75%;
+  }
+
+  .work-title {
+    font-size: 1.3rem !important;
+    margin-top: 0.5rem;
+  }
+  .cube-container {
+    width: 15rem;
+  }
+
+  .cube-img {
+    margin-top: 5rem !important;
+  }
+
+  .gutter-x {
+    --bs-gutter-x: 1rem !important;
+  }
+  .click-img {
+    margin-top: -8rem !important;
+  }
+  .cube-face-image {
+    width: 15rem;
+  }
+  .image-1 {
+    transform: translateZ(10rem);
+  }
+  .image-2 {
+    transform: rotateX(-180deg) translateZ(10rem);
+  }
+  .image-3 {
+    transform: rotateY(90deg) translateZ(10rem);
+  }
+  .image-4 {
+    transform: rotateY(-90deg) translateZ(10rem);
+  }
+  .image-5 {
+    transform: rotateX(90deg) translateZ(10rem);
+  }
+  .image-6 {
+    transform: rotateX(-90deg) translateZ(10rem);
+  }
+
+  .image-buttons input {
+    height: 5rem;
+  }
+
+  .blog-title {
+    font-size: 2rem !important;
+  }
+
+  .certi-title {
+    font-size: 1.8rem !important;
+    margin-top: 0.5rem;
+  }
+
+  #certificate {
+    height: 70vh;
+  }
+
+  #contact::before {
+    height: 370% !important;
+  }
+
+  #contact {
+    height: 370vh !important;
+  }
+
+  .contact-title {
+    font-size: 1.5rem !important;
+    margin-top: 0.5rem;
+  }
+
+  .contact-info {
+    width: 18rem !important;
+  }
+
+  .contact-form {
+    width: 24.5rem !important;
+  }
+
+  .contact-form > h4 {
+    left: 0rem !important;
+  }
+
+  #form {
+    width: 80% !important;
+  }
+
+  .contact-details {
+    width: 18rem !important;
+    position: absolute;
+    top: 54rem;
+  }
+
+  .info-heading {
+    font-size: 1rem;
   }
 }
 
-@media (max-width:380px) {
-  #winter-products{
-    bottom: -88rem !important;
+@media (min-width: 321px) and (max-width: 376px) {
+  #home {
+    height: 78vh;
   }
-  #banner{
-    margin-top: 218rem !important;
-  }
-} 
 
-
-@media (min-width:381px) and (max-width: 430px) {
-  #winter-products{
-    bottom: -30rem !important;
+  #about {
+    height: 257vh !important;
   }
-  #banner{
-    margin-top: 158rem !important;
+
+  .intro-content {
+    width: 22rem !important;
+  }
+
+  .skill-card-text {
+    width: 22.2rem !important;
+  }
+
+  .skill-card-title {
+    font-size: 1.6rem;
+  }
+
+  #static-heading {
+    top: 4rem !important;
+    left: 0rem !important;
+    font-size: 3rem !important;
+  }
+
+  .dynamic-text {
+    line-height: 110px;
+    top: -1.2rem !important;
+    left: 3rem !important;
+    margin-left: 10px;
+  }
+
+  .mg-top {
+    margin-top: -1rem !important;
+  }
+
+  .col-margin {
+    margin-bottom: 8rem;
+  }
+
+  #services {
+    height: 425vh !important;
+  }
+
+  .work-title {
+    font-size: 1.5rem !important;
+    margin-top: 0.5rem;
+  }
+
+  .image-buttons input {
+    height: 6rem !important;
+  }
+
+  .blog-title {
+    font-size: 2.4rem !important;
+  }
+
+  #certificate {
+    height: 55vh !important;
+  }
+
+  #contact {
+    height: 320vh !important;
+  }
+
+  .contact-title {
+    font-size: 2rem !important;
+  }
+
+  .contact-info {
+    width: 22rem !important;
+  }
+
+  .contact-form > h4 {
+    display: inline-block;
+    left: 2rem !important;
+  }
+
+  .contact-details {
+    width: 22rem !important;
+    position: absolute;
+    top: 57rem;
+  }
+}
+
+@media (min-width: 377px) and (max-width: 430px) {
+  .intro-content {
+    width: 25rem !important;
+  }
+
+  .col-margin {
+    margin-bottom: 8rem;
+  }
+
+  .dynamic-text {
+    line-height: 110px;
+    top: 2rem !important;
+    left: 0rem !important;
+    margin-left: 10px;
+  }
+
+  #static-heading {
+    top: -2.5rem !important;
+    left: 2rem !important;
+    font-size: 3.5rem !important;
+  }
+
+  #about {
+    height: 243vh !important;
+  }
+
+  #services {
+    height: 464vh !important;
+  }
+
+  .work-title {
+    font-size: 1.7rem !important;
+    margin-top: 0.5rem;
+  }
+
+  .image-buttons input {
+    height: 7rem !important;
+  }
+
+  .blog-title {
+    font-size: 2.7rem !important;
+  }
+
+  #certificate {
+    height: 60vh !important;
+  }
+
+  #contact {
+    height: 315vh !important;
+  }
+
+  .contact-title {
+    font-size: 2.2rem !important;
+  }
+
+  .contact-info {
+    width: 25rem !important;
+  }
+
+  .contact-details {
+    width: 24.5rem !important;
+    position: absolute;
+    top: 55rem;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  #home {
+    height: 77vh;
+  }
+
+  .home-content {
+    position: relative;
+    top: 6rem;
+  }
+
+  .home-content-title {
+    display: inline-block !important;
+    position: relative !important;
+    left: 0.5rem !important;
+    font-size: 1.4rem !important;
+    letter-spacing: 0.15rem !important;
+    color: var(--primary-color) !important;
+  }
+
+  .home-content-text {
+    margin-bottom: 1rem !important;
+    margin-top: 2rem !important;
+    display: inline-block !important;
+    position: relative !important;
+    left: 0.7rem !important;
+    font-size: 1rem !important;
+    letter-spacing: 0.05rem !important;
+    line-height: 3rem !important;
+    color: var(--secondary-color) !important;
+  }
+
+  .home-content-btn {
+    background: transparent !important;
+    border: 0.1rem solid transparent !important;
+    letter-spacing: 0.25rem !important;
+    font-size: 1.3rem !important;
+    color: var(--primary-color) !important;
+    padding: 1rem 1rem 0rem 1rem !important;
+    text-decoration: none !important;
+  }
+
+  .about-title {
+    top: 4rem;
+  }
+
+  .dynamic-text li {
+    top: -24px;
+    left: 0rem;
+  }
+
+  .more-btn-link {
+    padding: 15px 19px;
+  }
+  .intro-para {
+    line-height: 2rem;
+    font-size: 1.3rem;
+  }
+
+  .dynamic-text li span {
+    font-size: 1.6rem;
+    line-height: normal;
+  }
+
+  .learn-more-button {
+    padding: 14px 0px;
+    top: 3rem;
+    left: 7rem;
+  }
+
+  .intro {
+    top: 8rem !important;
+  }
+
+  .ability-text {
+    font-size: 1.2rem !important;
+    top: -1rem;
+    width: 100% !important;
+    line-height: 2rem;
+  }
+
+  #work {
+    height: 155vh;
+  }
+
+  .cube {
+    height: 75%;
+  }
+
+  .cube-container {
+    width: 16rem;
+  }
+
+  .cube-img {
+    margin-top: 5rem !important;
+  }
+
+  .click-img {
+    margin-top: -8rem !important;
+  }
+
+  .cube-face-image {
+    width: 15rem !important;
+  }
+
+  .image-1 {
+    transform: translateZ(10rem);
+  }
+  .image-2 {
+    transform: rotateX(-180deg) translateZ(10rem);
+  }
+  .image-3 {
+    transform: rotateY(90deg) translateZ(10rem);
+  }
+  .image-4 {
+    transform: rotateY(-90deg) translateZ(10rem);
+  }
+  .image-5 {
+    transform: rotateX(90deg) translateZ(10rem);
+  }
+  .image-6 {
+    transform: rotateX(-90deg) translateZ(10rem);
+  }
+
+  .certi-title {
+    font-size: 2.2rem !important;
+  }
+
+  .gutter {
+    --bs-gutter-x: 1.5rem !important;
+  }
+  .carousel {
+    top: 4rem;
+  }
+
+  .certi-width {
+    width: 63%;
+  }
+
+  .carousel-indicators {
+    margin-bottom: 0rem !important;
+  }
+
+  #contact::before {
+    height: 375% !important;
+  }
+
+  .contact-form > h4 {
+    display: inline-block;
+  }
+
+  .contact-form {
+    width: 24.5rem !important;
+  }
+
+  #form {
+    width: 80% !important;
+  }
+}
+
+@media screen and (min-width: 799px) {
+  .nav-list {
+    display: block !important;
+  }
+}
+
+@media (min-width: 431px) and (max-width: 770px) {
+  .home-content {
+    position: relative;
+    top: 6rem;
+  }
+
+  .home-content::before {
+    content: "";
+    background-color: wheat;
+    position: absolute;
+    top: 3rem;
+    left: 2rem;
+    width: 40rem;
+    height: 25rem;
+    background: currentColor;
+    z-index: -1;
+    opacity: 0.8;
+  }
+
+  .home-content-title {
+    display: inline-block !important;
+    font-size: 2rem !important;
+    letter-spacing: 0.2rem !important;
+    position: relative !important;
+    left: 4rem !important;
+    color: var(--primary-color) !important;
+  }
+
+  .home-content-text {
+    display: inline-block !important;
+    margin-top: 2rem !important;
+    font-size: 1.5rem !important;
+    letter-spacing: 0.1rem !important;
+    line-height: 3rem !important;
+    position: relative !important;
+    left: 4rem !important;
+    color: var(--secondary-color) !important;
+  }
+
+  .home-content-btn {
+    position: relative;
+    left: 2rem;
+    background: transparent !important;
+    border: 0.1rem solid transparent !important;
+    letter-spacing: 0.25rem !important;
+    font-size: 1.3rem !important;
+    color: var(--primary-color) !important;
+    padding: 1rem 1rem 0rem 1rem !important;
+    text-decoration: none !important;
+  }
+
+  #about {
+    height: 310vh;
+  }
+
+  #static-heading {
+    top: 4rem;
+    left: 4rem;
+    font-size: 4.5rem;
+  }
+
+  hr {
+    visibility: hidden;
+  }
+
+  .dynamic-text {
+    line-height: 110px;
+    top: 8.5rem;
+    left: 2rem;
+    margin-left: 10px;
+  }
+
+  .dynamic-text li {
+    top: -24px;
+    left: 0rem;
+  }
+
+  .dynamic-text li span {
+    font-size: 3.5rem;
+    line-height: normal;
+  }
+
+  .ability-text {
+    font-size: 1.7rem !important;
+    top: 10rem;
+    width: 90% !important;
+    line-height: 3.5rem;
+  }
+
+  .learn-more-button {
+    top: 16rem;
+    left: 17rem;
+  }
+
+  .intro-content {
+    height: 41rem;
+  }
+
+  .intro-para {
+    line-height: 2rem;
+  }
+
+  .skill-card-text {
+    width: 20.2rem !important;
+  }
+
+  .skill-card-title {
+    font-size: 1.6rem;
+  }
+
+  .col-developer,
+  .col-app {
+    display: none;
+  }
+
+  #work {
+    height: 205vh;
+  }
+  .cube {
+    height: 75%;
+  }
+
+  .cube-container {
+    width: 14rem;
+  }
+
+  .cube-img {
+    margin-top: 5rem !important;
+  }
+
+  .click-img {
+    margin-top: -8rem !important;
+  }
+  .cube-face-image {
+    width: 15rem;
+  }
+  .image-1 {
+    transform: translateZ(10rem);
+  }
+  .image-2 {
+    transform: rotateX(-180deg) translateZ(10rem);
+  }
+  .image-3 {
+    transform: rotateY(90deg) translateZ(10rem);
+  }
+  .image-4 {
+    transform: rotateY(-90deg) translateZ(10rem);
+  }
+  .image-5 {
+    transform: rotateX(90deg) translateZ(10rem);
+  }
+  .image-6 {
+    transform: rotateX(-90deg) translateZ(10rem);
+  }
+
+  .image-buttons input {
+    height: 8rem;
+  }
+
+  #certificate {
+    height: 105vh;
+  }
+
+  .contact-title {
+    font-size: 2.7rem !important;
+  }
+
+  .contact-info {
+    width: 44rem !important;
+  }
+
+  .contact-form {
+    width: 24rem !important;
+  }
+
+  #form {
+    width: 80% !important;
+  }
+
+  .contact-details {
+    width: 23rem !important;
+  }
+}
+
+@media (min-width: 771px) and (max-width: 1030px) {
+  .home-content::before {
+    content: "";
+    background-color: wheat;
+    position: absolute;
+    top: 7rem;
+    left: 5rem;
+    width: 45rem;
+    height: 30rem;
+    background: currentColor;
+    z-index: -1;
+    opacity: 0.8;
+  }
+  .home-content-title {
+    letter-spacing: 0.2rem;
+    display: inline-block;
+    position: relative;
+    top: 6rem;
+    left: 6rem;
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--primary-color);
+  }
+
+  .home-content-text {
+    display: flex;
+    letter-spacing: 0.2rem;
+    flex-wrap: wrap;
+    width: 38rem;
+    color: var(--secondary-color);
+    position: relative;
+    top: 8rem;
+    left: 6rem;
+    font-size: 1.8rem;
+    line-height: 3.5rem;
+  }
+
+  .home-content-button {
+    padding-top: 3rem;
+    display: inline-block;
+    position: relative;
+    top: 5rem;
+    left: 8rem;
+  }
+
+  .home-content-btn {
+    background: transparent;
+    border: 0.1rem solid transparent;
+    margin: 1.6rem 1.6rem 0 0;
+    letter-spacing: 0.25rem;
+    padding: 0.7rem 1rem 0.7rem 1rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    font-weight: bold;
+    transition: 0.5s;
+  }
+
+  .home-content-button a:hover {
+    background-color: var(--secondary-color);
+    color: #35351b;
+    outline: none;
+  }
+
+  #about {
+    height: 315vh;
+  }
+
+  #static-heading {
+    top: 5rem;
+    left: 14rem;
+    font-size: 5.5rem;
+  }
+
+  .dynamic-text {
+    line-height: 115px;
+    top: 8rem;
+    left: 13rem;
+    margin-left: 10px;
+  }
+
+  .dynamic-text li span {
+    font-size: 3.5rem;
+    line-height: normal;
+  }
+
+  .learn-more-button {
+    left: 24rem;
+  }
+
+  .skill-card-text {
+    width: 17.5rem !important;
+  }
+
+  .skill-card-title {
+    font-size: 1.6rem;
+  }
+
+  .cube {
+    height: 75%;
+  }
+
+  .cube-container {
+    width: 12rem;
+  }
+
+  .cube-face-image {
+    width: 15rem;
+  }
+  .image-1 {
+    transform: translateZ(10rem);
+  }
+  .image-2 {
+    transform: rotateX(-180deg) translateZ(10rem);
+  }
+  .image-3 {
+    transform: rotateY(90deg) translateZ(10rem);
+  }
+  .image-4 {
+    transform: rotateY(-90deg) translateZ(10rem);
+  }
+  .image-5 {
+    transform: rotateX(90deg) translateZ(10rem);
+  }
+  .image-6 {
+    transform: rotateX(-90deg) translateZ(10rem);
+  }
+
+  .image-buttons input {
+    height: 8rem;
+  }
+
+  #certificate {
+    height: 125vh;
+  }
+}
+
+@media (min-width: 1030px) and (max-width: 1450px) {
+  #about {
+    height: 275vh;
+  }
+
+  #services {
+    height: 220vh !important;
+  }
+}
+
+@media (min-width: 1030px) {
+  .home-content::before {
+    content: "";
+    background-color: wheat;
+    position: absolute;
+    top: 10rem;
+    left: 9rem;
+    width: 50rem;
+    height: 30rem;
+    background: currentColor;
+    z-index: -1;
+    opacity: 0.8;
+  }
+  .home-content-title {
+    letter-spacing: 0.2rem;
+    display: inline-block;
+    position: relative;
+    top: 9rem;
+    left: -4rem;
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--primary-color);
+  }
+
+  .home-content-text {
+    display: flex;
+    letter-spacing: 0.2rem;
+    flex-wrap: wrap;
+    width: 38rem;
+    color: var(--secondary-color);
+    position: relative;
+    top: 11rem;
+    left: -4rem;
+    font-size: 1.8rem;
+    line-height: 3.5rem;
+  }
+
+  .home-content-button {
+    padding-top: 3rem;
+    display: inline-block;
+    position: relative;
+    top: 8rem;
+    left: -3rem;
+  }
+
+  .home-content-btn {
+    background: transparent;
+    border: 0.1rem solid transparent;
+    margin: 1.6rem 1.6rem 0 0;
+    letter-spacing: 0.25rem;
+    padding: 0.7rem 1rem 0.7rem 1rem;
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: var(--primary-color);
+    font-weight: bold;
+    transition: 0.5s;
+  }
+
+  .home-content-button a:hover {
+    background-color: var(--secondary-color);
+    color: #35351b;
+    outline: none;
+  }
+}
+
+@media (min-width: 431px) and (max-width: 1440px) {
+  #contact::before {
+    height: 230% !important;
+  }
+
+  #contact {
+    height: 230vh !important;
   }
 }
